variables.RunFour.scala.error
Compilation error:
RunFour:7: error: value unary_! is not a member of Int
if (!baggle==4){
    ^